# CommercialBrainz

./: .dockerignore  .env.example  .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_user_access_level.py  003_submission_terms_document.py  004_media_fingerprints.py  005_password_reset_tokens.py  006_email_verification.py  007_user_reputation.py  008_commercial_decade.py  009_video_sub_region.py  010_fingerprint_probe_data.py  011_advertiser_approval.py  012_video_thumbnail_url.py  013_advertiser_logo.py  014_advertiser_metadata.py  015_advertiser_logo_gallery.py  016_fingerprint_retry_count.py  017_registration_invites.py  018_edit_advertiser_logo.py  019_api_tokens.py  020_account_deletion_requests.py  021_video_popularity.py  022_split_commercial.py  023_submission_terms_v2.py  024_submission_terms_accepted_at.py  025_video_link_check.py  026_video_file_sha256_index.py  027_bulk_submit_power_users.py  027_commercial_reports.py  027_content_reports.py  028_bulk_submit_power_users.py  029_commercial_type.py  030_bumper_commercial_type.py  031_catalog_entities.py  032_catalog_updated_at.py  033_bulk_item_queued_status.py  034_bulk_batch_defaults.py  034_spoof_commercial_type.py  035_spoof_commercial_type.py
backend/app/: __init__.py  cli.py  config.py  database.py  main.py  submission_quiz.py  submission_terms.py  utils.py
backend/app/auth/: deps.py  security.py  serializers.py
backend/app/data/: power_user_terms_v1.py  submission_terms_v1.py  submission_terms_v2.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  account_settings.py  advertiser_logos.py  advertiser_metadata.py  advertisers.py  api_tokens.py  archive_export.py  archive_export_queue.py  archive_org_upload.py  browse.py  bulk_import_marker.py  bulk_submit.py  catalog.py  catalog_logos.py  commercial_metadata.py  commercial_reports.py  commercial_split.py  edit_response.py  email.py  email_verification.py  fingerprint_queries.py  fingerprint_queue_status.py  hash_queue.py  holiday_dates.py  link_check.py  logo_metadata.py  logo_storage.py  media_hash.py  media_probe.py  password_reset.py  phash.py  (+13 more)
backend/tests/: test_api_tokens.py  test_archive_export.py  test_auth_tokens.py  test_brand_approval.py  test_browse_sections.py  test_bulk_submit.py  test_catalog_entities.py  test_commercial_list_thumbnail.py  test_commercial_metadata.py  test_commercial_reports.py  test_edit_votes.py  test_hash_lookup.py  test_health.py  test_link_check.py  test_logo_metadata.py  test_logo_storage.py  test_media_hash.py  test_media_probe.py  test_orm_mappers.py  test_phash.py  test_registration_invites.py  test_submission_genres.py  test_submission_terms_accept.py  test_thumbnail_storage.py  test_user_profile.py  test_youtube_metadata.py  test_youtube_playlist_url.py  test_ytdlp_auth.py
(+158 files in other folders)
