[project]
name = "commercialbrainz"
version = "0.1.0"
description = "CommercialBrainz — open commercial video database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "PyJWT[crypto]>=2.13.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.30",
    "redis>=5.2.0",
    "arq>=0.26.1",
    "httpx>=0.28.0",
    "internetarchive>=5.0.0",
    "python-slugify>=8.0.4",
    "Pillow>=12.3.0",
    "imagehash>=4.3.0",
    "yt-dlp>=2026.6.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
commercialbrainz = "app.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Long legal/content strings; wrapping harms readability.
"app/data/**" = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/data/*", "app/alembic/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
